--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.190 2001/10/09 10:55:06 tothwolf Exp $
+$Id: UPDATES1.6,v 1.191 2001/10/09 17:23:21 tothwolf Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          Tothwolf  fixed buffer overflow in adduser()
           Tothwolf  fixed typo in filedb3.c: EBUG_MEM -> DEBUG_MEM
           Tothwolf  removed extra egg_bzero call from filesys.c
           poptix    properly check argv[]/argc before using it
