applied my security patch

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,12 @@
-$Id: UPDATES1.6,v 1.228 2001/11/29 05:48:37 guppy Exp $
+$Id: UPDATES1.6,v 1.229 2001/11/29 23:25:36 guppy Exp $
 
 Changes in eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.7
 Found by  Fixed by  What...
+          guppy     make the default bot a bit more secure in regards to
+                    the ability to execute tcl commands from the partyline
 various   guppy     tcl_newban and tcl_newchanban didn't always add the bans
           Wcc       cmd_optimise is now cmd_optimize
           Hanno     fixed testip in alltools.tcl
