Fixed a possible exploit in reaffirm_owners(). Patch by poptix.

--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.391 2002/08/09 19:26:42 wcc Exp $
+$Id: UPDATES1.6,v 1.392 2002/08/11 18:45:51 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.13
 Found by  Fixed by  What...
+          poptix    fixed a possible exploit in reaffirm_owners()
 KuNgFo0   Wcc/      friends/ops/bots are now correctly unbanned when a ban is set on a
           [sL]      channel that matches their host
           BHAB      compile fix for systems that do not support snprintf()
