--- a/doc/UPDATES1.6
+++ b/doc/UPDATES1.6
@@ -1,10 +1,11 @@
-$Id: UPDATES1.6,v 1.404 2002/09/09 23:14:23 wcc Exp $
+$Id: UPDATES1.6,v 1.405 2002/09/10 02:22:00 wcc Exp $
 
 Changes in Eggdrop: (since v1.6.0)
 ----------------------------------
 
 1.6.13
 Found by  Fixed by  What...
+Jerome    Wcc       fixed a possible buffer overflow in raw_dcc_resend_send()
           darko``   fixed a missing escape in some regexps in misc/modconfig
 [sL]      Wcc       channel set #chan chanmode $var corrupted $var in Tcl8.x
           blaster^  don't log "joined #chan but didn't want to" in certain cases where
